kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: httpbin
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: httpbin
